styles/css.css
* {
    box-sizing: border-box;
  }
  
  body {
    margin: 0px;
    font-family: 'segoe ui';
    
  }
  
  .nav {
    height: 50px;
    width: 100%;
    background-color: #1177ca;
    position: relative;
  }
  
  .nav > .nav-header {
    display: inline;
  }
  
  .nav > .nav-header > .nav-title {
    display: inline-block;
    font-size: 22px;
    color: #fff;
    font-weight: 550;
    font-family: Arial, Helvetica, sans-serif;
    padding: 10px 10px 10px 10px;
  }
  
  .nav > .nav-btn {
    display: none;
  }
  
  .nav > .nav-links {
    display: inline;
    float: right;
    font-size: 18px;
  }
  .nav > .nav-links > ul li a{
    display: block;
    padding: 0 8px;
    color: #fff;
    line-height: 40px;
    font-size: 18px;
    text-decoration: none;

  }
  .nav > .nav-links > ul{
    padding: 0;
    margin-top: 5px;
    list-style: none;
    position: relative;
    
  }
  .nav > .nav-links > ul li{
    display: inline-block;
    background-color: #1177ca;
    
    
  }
  .nav > .nav-links > ul li:hover{
      background-color: #0b65af;
      border-radius: 5px;
  }
  
  .nav > #nav-check {
    display: none;
  }

 .nav .nav-links ul a.icon{
 margin-left: 80px;
 margin-right: 10px;
 }

 .nav .nav-links ul a i{
    background-color: #fff;
    border-radius: 50px;
    padding: 7px;
    margin-left: 5px;
 }

  
  @media (max-width:750px) {
    .nav > .nav-btn {
      display: inline-block;
      position: absolute;
      right: 0px;
      top: 0px;
    }
    .nav > .nav-btn > label {
      display: inline-block;
      width: 50px;
      height: 50px;
      padding: 13px;
    }
    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
      background-color: rgba(0, 0, 0, 0.3);
    }
    .nav > .nav-btn > label > span {
      display: block;
      width: 25px;
      height: 10px;
      border-top: 2px solid #eee;
    }
    .nav > .nav-links {
      position: absolute;
      display: block;
      width: 100%;
      background-color: #333;
      height: 0px;
      transition: all 0.3s ease-in;
      overflow-y: hidden;
      top: 50px;
      left: 0px;
    }
    .nav > .nav-links > ul li a {
      display: block;
      width: 100%;
    }

    /*   */


    
      .nav > .nav-links > ul li{
        display: block;
        margin-bottom: 20px;
        padding: 0;
        background-color: #333;
         
      }
      .nav > .nav-links > ul li a{
          margin-left: 40%;
      }
      .nav .nav-links ul a.icon{
        margin-left: 33%;
      }

    /*   */
    .nav > #nav-check:not(:checked) ~ .nav-links {
      height: 0px;
    }
    .nav > #nav-check:checked ~ .nav-links {
      height: calc(100vh - 50px);
      overflow-y: auto;
    }
  }

  .box {
    margin:5px 20px;
    float: center;
    height: 25px;
    display: inline-flex;
    cursor: pointer;
    padding: 3px 3px;
    background: #fff;
    border-radius: 30px;
    align-items: center;
    box-shadow: 0 10px 25px rgb(0, 0, 0, 0.3);
  }
  .box:hover input{
    width: 200px;
  }
  .box input{
    width: 0;
    outline: none;
    border: none;
    font-weight: 500;
    transition: 0.8s;
    background: transparent;
  }
  .box a .fa{
    color: #1daf;
    font-size: 15px;
    align-items: center;
    justify-content: center;
    
  }
 

  .container {
    margin: 10px 35px;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 5px;
    width: 90%;
    text-align: center;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
    justify-content: center;
  
}
header {
  background-color: #1177ca;
  padding: 5px;
  color: white;
  border-radius: 5px 5px 0 0;
}

.content {
  padding: 20px;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 0px;
}

.circle {
  background-color: #000;
  color: white;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  font-size: 20px;
}

h2 {
  font-size: 24px;
}

p {
  font-size: 14px;
  color: #555;
  margin-bottom: 20px;
}
.edit-btn {
  display: inline-block;
  background-color: #f26d3d;
  color: white;
  padding: 8px 12px;
  text-decoration: none;
  border-radius: 5px;
  font-weight: bold;
}

.edit-btn:hover {
  background-color: #e05d2b;
}

